--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="layout_transitions">Layout transitions</string>
     <string name="custom_view_animations">Custom view animations</string>
     <string name="value_animations">Value animations</string>
+    <string name="shared_element_animations">Shared element animations</string>
+    <string name="transition_animations">Transition animations</string>
     <string name="progress_template">%d %%</string>
     <string name="click_to_start_animation">Click to start animation</string>
+    <string name="swap_scenes">Swap scenes</string>
+    <string name="shared_element_button">shared_element_button</string>
 </resources>
